--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Mmm-Biscuit's homepage of projects and code
+description: Mmm-Biscuit's homepage of projects and code
