--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Mmm-Biscuits.....
+title: Mmm.....Biscuits.
 description: Mmm-Biscuit's homepage of projects and code
